Refactor boards